# mcp-teams-server

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: PR-verify.yml  release.yml  scorecard-analysis.yml  sonar-cloud-analysis.yml
src/mcp_teams_server/: __init__.py  config.py  teams.py
tests/: test_teams.py
