[project]
name = "mcp-teams-server"
version = "1.0.7"
description = "An MCP server implementation for Microsoft Teams integration"
readme = "README.md"
keywords = ["mcp", "llm", "automation", "Microsoft Teams"]
authors = [{ name = "Industria de Diseño Textil S.A." }]
maintainers = [
    { name = "Mariano Alonso Ortiz", email = "marianoao@inditex.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "microsoft-agents-authentication-msal>=0.8.0",
    "microsoft-agents-activity>=0.8.0",
    "microsoft-agents-hosting-core>=0.8.0",
    "microsoft-agents-hosting-teams>=0.8.0",
    "microsoft-agents-hosting-aiohttp>=0.8.0",
    "python-dotenv>=1.2.1",
    "mcp[cli]==1.24.0",
    "msgraph-sdk>=1.55.0",
    "setuptools>=82.0.0",
]

[project.urls]
Repository = "https://github.com/InditexTech/mcp-teams-server"
Issues = "https://github.com/InditexTech/mcp-teams-server/issues"

[project.scripts]
mcp-teams-server = "mcp_teams_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pyproject-parser[cli]>=0.13.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.2.1",
    "reuse>=5.0.2",
    "ruff>=0.12.10",
]

[tool.uv]
package = true

[tool.uv.extra-build-dependencies]
mcp-teams-server = ["setuptools"]

[[tool.uv.index]]
name = "inditex-artifacts-public"
url = "https://inditex.jfrog.io/artifactory/api/pypi/python-public/simple"
default = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/mcp_teams_server/teams.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --import-mode=importlib --strict-markers -m \"not integration\""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
